mcp/test-fetch/test-fetch-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mcp-fetch
  namespace: toolhive-system

spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`fetch.internal.eheaver.cloud`)
      priority: 10
      services:
        - kind: Service
          name: mcp-fetch-proxy
          namespace: toolhive-system
          port: 8080
